# EquiPay-backend

./: .dockerignore  CLAUDE.md  Dockerfile  compose.yaml  main.py  pyproject.toml
docs/: group-management.md
migrations/: env.py
migrations/versions/: 248992902c36_remove_created_by_from_expenses.py  8ce527299ad1_initial_commit.py  a2b3c4d5e6f7_add_groups_expenses_settlements_tables.py  b3c4d5e6f7a8_add_archive_and_former_member_fields.py  c4d5e6f7a8b9_cascade_delete_expenses_settlements_on_group.py  d5e6f7a8b9c0_revert_cascade_fk_keep_data_on_group_delete.py  e1f2a3b4c5d6_add_auth_fields_and_friendships.py  f6a7b8c9d0e1_add_group_member_status_and_notifications.py
src/: config.py  main.py
src/core/: database.py  lifespan.py  ratelimit.py  redis.py  security.py
src/modules/agents/: router.py
src/modules/auth/: router.py  schemas.py  services.py
src/modules/expenses/: models.py  repository.py  router.py  schemas.py  services.py
src/modules/friendships/: models.py  repository.py  router.py  schemas.py  services.py
src/modules/groups/: models.py  repository.py  router.py  schemas.py  services.py
src/modules/notifications/: models.py  repository.py  router.py  schemas.py
src/modules/settlements/: models.py  repository.py  router.py  schemas.py  services.py
src/modules/users/: models.py  repository.py  router.py  schemas.py  services.py
src/services/: expense_queries.py
